--- a/Webcats.html
+++ b/Webcats.html
@@ -220,7 +220,7 @@ link: 'https://www.webtoons.com/en/comedy/cursed-princess-club/list?title_no=153
 'https://swebtoon-phinf.pstatic.net/20140814_112/1407995018570pf1Yj_JPEG/28_EB8D94EAB28CEC9DB4EBA8B8.jpg',
 tags: ['fantasy', 'action', 'adventure', 'comedy', 'school life', 'supernatural'],
 link: 'https://www.webtoons.com/en/fantasy/the-gamer/list?title_no=88'},
-{ name: 'The #8b0000 King', image:
+{ name: 'The Red King', image:
 'https://swebtoon-phinf.pstatic.net/20190725_17/1564005175416DA6j4_JPEG/10_EC8DB8EB84A4EC9DBC_ipad.jpg',
 tags: ['fantasy', 'action', 'supernatural'],
 link: 'https://www.webtoons.com/en/fantasy/the-#8b0000-king/list?title_no=1687'},
@@ -579,16 +579,15 @@ h3{
  <button class="tablink" onclick="openPage('WebtoonQuiz', this, '#e9e5dd')"><div style="margin:9px 0 0 90px;color:#e9e5dd">Webtoon Quiz</div></button>
  <button class="tablink" onclick="openPage('WhatShouldYouRead', this, '#e9e5dd')"><div style="margin:9px 0 0 90px;color:#e9e5dd">What Should You Read?</div></button>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-  <div style="background-color:#e9e5dd;padding:210px 300px"style="width:100%;padding:0"id="Webcats"class="tabcontent">
+  <div style="background-color:#e9e5dd;padding:240px 300px"style="width:100%;padding:0"id="Webcats"class="tabcontent">
     <span class="largeHeader"><span style="color:#8b0000">WEBCATS: </span><BR>
     BEST
     <br>
     WEB
     <br>
     TOONS
-</span>
-<div style="margin-top:170px"><h3> ALL OUR FAVORITE WEBTOONS:</H1><div style="border-top:solid 2px #8b0000;margin:9px 0 50px"></div>
+<br></span>
+<div style="margin-top:190px"><h3> ALL OUR FAVORITE WEBTOONS:</H3><div style="border-top:solid 2px #8b0000;margin:9px 0 50px"></div>
       <p id ="page1"></p></div></div>
 
 
@@ -691,7 +690,7 @@ style="background-color:#e9e5dd;padding:200px 300px;font-size:19px;line-height:2
       <input type="radio" name="music" value="Tragedy/Thriller/psychological">Rock<BR><br>
       </p>
 
-      <p><div class="quizHeader">If you had a superpower what would it be? </div><BR>
+      <p><div class="quizHeader">If you had a superpower, what would it be? </div><BR>
       <input type="radio" name="superpower" value="Romance/Drama/Fantasy">Time Travel<BR>
       <input type="radio" name="Isuperpower" value="SliceOfLife/Comedy/SchoolLife">Flight<BR>
       <input type="radio" name="superpower" value="Action/Mystery/Adventure">Super Speed<BR>
@@ -729,7 +728,7 @@ style="background-color:#e9e5dd;padding:200px 300px;font-size:19px;line-height:2
 
 </div>
 
-<div id="WhatShouldYouRead" class="tabcontent" style="background-color: #e9e5dd;padding:200px 300px">
+<div id="WhatShouldYouRead" class="tabcontent" style="background-color: #e9e5dd;padding:230px 300px">
   <span class="headerStuff">
 What
 <br>
